--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postcss": "postcss -c postcss.config.js -w"
+    "postcss": "postcss -c postcss.config.js -w",
+    "webpack:watch": "webpack -w",
+    "flowtype": "watch \"flow || exit 0\" assets/react",
+    "react": "concurrently --kill-others --prefix \"[{name}]\" --names \"Webpack,Flowtype\" -c \"bgBlue.bold,bgYellow.bold\" \"npm run webpack:watch\" \"npm run flowtype\""
   },
   "repository": {
     "type": "git",
@@ -29,9 +32,25 @@
   "homepage": "https://github.com/htmlburger/carbon-fields#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.2",
+    "babel-core": "^6.18.2",
+    "babel-loader": "^6.2.8",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
+    "concurrently": "^3.1.0",
     "cssnano": "^3.8.0",
+    "flow-bin": "^0.35.0",
     "postcss-cli": "^2.6.0",
     "postcss-import": "^8.1.3",
-    "postcss-simple-vars": "^3.0.0"
+    "postcss-simple-vars": "^3.0.0",
+    "watch": "^1.0.1",
+    "webpack": "^1.13.3"
+  },
+  "dependencies": {
+    "react": "^15.4.0",
+    "react-dom": "^15.4.0",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-saga": "^0.13.0"
   }
 }
