--- a/.flowconfig
+++ b/.flowconfig
@@ -1,2 +1,6 @@
-[ignore]
-.*/node_modules/.*
+[options]
+module.name_mapper='^lib\/\(.*\)$' -> '<PROJECT_ROOT>/assets/react/lib/\1'
+module.name_mapper='^containers\/\(.*\)$' -> '<PROJECT_ROOT>/assets/react/containers/\1'
+module.name_mapper='^reducers\/\(.*\)$' -> '<PROJECT_ROOT>/assets/react/reducers/\1'
+module.name_mapper='^selectors\/\(.*\)$' -> '<PROJECT_ROOT>/assets/react/selectors/\1'
+module.name_mapper='^store$' -> '<PROJECT_ROOT>/assets/react/store.js'
