--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^6.5.2",
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-latest": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
@@ -47,10 +48,13 @@
     "webpack": "^1.13.3"
   },
   "dependencies": {
+    "lodash": "^4.17.2",
+    "object-path-immutable": "^0.5.1",
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "5.0.0-beta.3",
     "redux": "^3.6.0",
+    "redux-actions": "^1.0.1",
     "redux-saga": "^0.13.0",
     "reselect": "^2.5.4"
   }
