--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^15.4.0",
     "react-dom": "^15.4.0",
     "react-redux": "5.0.0-beta.3",
+    "recompose": "^0.20.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.0.1",
     "redux-saga": "^0.13.0",
