--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.8",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-latest": "^6.16.0",
+    "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-3": "^6.17.0",
+    "babel-preset-stage-2": "^6.18.0",
     "concurrently": "^3.1.0",
     "cssnano": "^3.8.0",
     "enzyme": "^2.6.0",
